# SkillTrack

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py
src/tests/: conftest.py
tests/: conftest.py  test_models.py
