[project]
name = "TodoListAPI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-core>=2.41.5",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style="single"
indent-style="tab"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = "\\.venv|create|build|dist"
# Optionnel : inclure seulement le code source
# files = "app"
ignore_missing_imports = true
warn_unused_configs = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80 --cov-config=.coveragerc"

[tool.fastapi]
entrypoint = "app.main:app"

